--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -109,12 +109,44 @@ input:focus {
     font-size: 4rlh;
   }
 
+  & .relative-unit-vb {
+    font-size: 4vb;
+  }
+
   & .relative-unit-vh {
     font-size: 4vh;
   }
 
+  & .relative-unit-dvh {
+    font-size: 4dvh;
+  }
+
+  & .relative-unit-lvh {
+    font-size: 4lvh;
+  }
+
+  & .relative-unit-svh {
+    font-size: 4svh;
+  }
+
+  & .relative-unit-vi {
+    font-size: 4vi;
+  }
+
   & .relative-unit-vw {
     font-size: 4vw;
+  }
+
+  & .relative-unit-dvw {
+    font-size: 4dvw;
+  }
+
+  & .relative-unit-lvw {
+    font-size: 4lvw;
+  }
+
+  & .relative-unit-svw {
+    font-size: 4svw;
   }
 
   & .relative-unit-vmin {
@@ -123,38 +155,6 @@ input:focus {
 
   & .relative-unit-vmax {
     font-size: 4vmax;
-  }
-
-  & .relative-unit-vb {
-    font-size: 4vb;
-  }
-
-  & .relative-unit-vi {
-    font-size: 4vi;
-  }
-
-  & .relative-unit-svw {
-    font-size: 4svw;
-  }
-
-  & .relative-unit-svh {
-    font-size: 4svh;
-  }
-
-  & .relative-unit-lvw {
-    font-size: 4lvw;
-  }
-
-  & .relative-unit-lvh {
-    font-size: 4lvh;
-  }
-
-  & .relative-unit-dvw {
-    font-size: 4dvw;
-  }
-
-  & .relative-unit-dvh {
-    font-size: 4dvh;
   }
 }
 
@@ -191,6 +191,12 @@ input:focus {
       color: yellow;
     }
 
+    /*
+    .bgc.brd {}...... Means that the element has both .bgc and .brd classes at the same time
+                      Matches only same element with both classes.
+    .bgc .brd {}..... Means that their is a nested relationship, with parent as .bgc and child as .brd
+                      Matches only descendant .brd inside .bgc, never the same element.
+    */
     & .bgc.brd {
       background-color: peachpuff;
       border: 4px solid red;
@@ -238,6 +244,27 @@ input:focus {
     & #id4:hover {
       color: green;
     }
+
+    & form {
+      #user {
+        border: 2px solid black;
+        border-radius: 5px;
+        font-size: 16px;
+        font-family: Verdana, sans-serif;
+        padding: 10px;
+        margin-top: 5px;
+        display: block;
+      }
+
+      #btn {
+        background-color: #031926;
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+    }
   }
 
   & .combinators {
@@ -277,7 +304,7 @@ input:focus {
       }
 
       & ul > li {
-        display: inline-block;
+        display: inline;
         margin-right: 15px;
       }
 
@@ -344,6 +371,59 @@ input:focus {
 
     & [class~="featured"] {
       background-color: peachpuff;
+    }
+
+    & .additional-examples {
+      /*
+      Will style all paragraphs with a blue border
+      */
+      & p[title] {
+        border: 2px solid blue;
+        padding: 5px;
+      }
+
+      /*
+      We have:  title="css bg-red1"
+                title="css bg-red2"
+                title="css bg-red3"
+      Styles nothing because nothing matches: title="css"
+      */
+      & p[title="css"],
+
+      /*
+      We have:  title="css bg-red1"
+                title="css bg-red2"
+                title="css bg-red3"
+      Styles only: title="css bg-red3"
+      */
+      & p[title="css bg-red3"] {
+        background-color: red;
+      }
+
+      & p[title*="blu"] {
+        background-color: blue;
+      }
+
+      & p[title^="css bg-b"] {
+        color: white;
+      }
+
+      & p[title$="1"] {
+        background-color: yellow;
+        color: black;
+      }
+
+      /*
+      Will not work because there no hyphen after css
+      */
+      & p[title|="css"] {
+        background-color: green;
+      }
+
+      & p[title~="background"] {
+        background-color: indigo;
+        color: white;
+      }
     }
   }
 
