--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -868,7 +868,7 @@ a:active {}
         font-size: 1.25em;
         background-color: green;
         color: white;
-        position:relative;
+        position: relative;
       }
     }
 
@@ -935,7 +935,7 @@ a:active {}
         color: red;
       }
 
-      & .special:not(#superSpecial) {
+      & .special:not(#super-special) {
         background-color: peachpuff;
       }
     }
@@ -1200,7 +1200,6 @@ a:active {}
     & .pc-visited {}
 
     & .pc-where {}
-
   }
 
   & .pseudo-elements {
