--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -685,7 +685,8 @@ a:active {}
     }
 
     & .pc-first-child {
-      & p:first-child {
+      & p:first-child,
+      & ul li:first-child {
         background-color: peachpuff;
         color: blue;
       }
@@ -698,7 +699,8 @@ a:active {}
         padding: 10px;
       }
 
-      & p:first-of-type {
+      & p:first-of-type,
+      & li:first-of-type {
         color: black;
         background-color: peachpuff;
       }
