--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -770,6 +770,106 @@ a:active {}
         color: white;
         border-radius: 6px;
       }
+
+      & form {
+        margin-top: 10px;
+
+        & label {
+          font-size: 18px;
+          color: black;
+          width: 500px;
+          padding: 10px;
+        }
+
+        & select {
+          padding: 10px 16px;
+          font-size: 16px;
+          color: black;
+          background-color: #fff;
+          border: 1px solid #597183;
+          border-radius: 8px;
+          margin-top: 25px;
+          width: 300px;
+          transition: all 0.3s ease;
+
+          &:focus {
+            background-color: rgb(173, 233, 209);
+            box-shadow: 20px 15px 30px yellow, -20px 15px 30px lime, -20px -15px 30px blue, 20px -15px 30px red;
+          }
+        }
+      }
+
+      & .toggle {
+        position: relative;
+        display: block;
+        width: 100%;
+        margin: 2em;
+
+        & label {
+          padding-right: 8px;
+          font-family: Verdana, Geneva, Tahoma, sans-serif;
+          font-size: 16px;
+          line-height: 28px;
+          color: black;
+        }
+
+        & span {
+          position: relative;
+          display: inline-block;
+          vertical-align: middle;
+          cursor: pointer;
+
+          &:before {
+            display: block;
+            width: 50px;
+            height: 30px;
+            content: "";
+            background-color: #a9adaf;
+            border-radius: 28px;
+            transition: background-color 0.3s ease;
+          }
+
+          &:after {
+            position: absolute;
+            top: 1px;
+            left: 1px;
+            display: block;
+            width: 30px;
+            height: 28px;
+            visibility: visible;
+            content: "";
+            background-color: #fff;
+            border-radius: 28px;
+            transition: left 0.3s ease;
+          }
+        }
+
+        input[type="checkbox"] {
+          &:checked ~ span {
+            &:before {
+              background-color: orange;
+            }
+
+            &:after {
+              top: 1px;
+              left: 21px;
+            }
+          }
+
+          &:hover ~ span:before {
+            background-color: #1194d1;
+          }
+
+          &:not(:checked):hover ~ span:before {
+            background-color: #afbec9;
+          }
+
+          &:focus ~ span:before {
+            outline: none;
+            box-shadow: 0 0 0 4px red;
+          }
+        }
+      }
     }
 
     & .pc-focus-visible {
