--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -10,6 +10,7 @@ a:visited {}
 a:hover {}
 a:active {}
 ***********************************************************************************************************************/
+@import url("learn-css-helper.css");
 
 /***********************************************************************************************************************
     HOME
@@ -1064,14 +1065,14 @@ a:active {}
           padding-bottom: 5px;
           background:
             linear-gradient(
-              to right, 
-              rgb(179, 232, 168), 
+              to right,
+              rgb(179, 232, 168),
               rgb(185, 162, 215)
             ) 100% 100% / 100% 3px no-repeat,
             linear-gradient(
-              to right, 
-              rgba(255, 0, 0, 1), 
-              rgba(255, 0, 180, 1), 
+              to right,
+              rgba(255, 0, 0, 1),
+              rgba(255, 0, 180, 1),
               rgba(0, 200, 50, 1)
             ) 0 100% / 0 3px no-repeat;
           transition: background-size 700ms;
@@ -1085,13 +1086,13 @@ a:active {}
       .example-7 {
         .glow {
           position: relative;
+          z-index: 0;
           padding: 10px 20px;
           color: #fff;
           background: #111;
           border: none;
           border-radius: 12px;
           cursor: pointer;
-          z-index: 0;
           transition: color 0.3s ease;
 
           &::before {
@@ -1102,16 +1103,16 @@ a:active {}
             width: calc(100% + 8px);
             height: calc(100% + 8px);
             background: linear-gradient(
-              60deg, #ff0000, #ff7300, #fffb00, #48ff00, 
+              60deg, #ff0000, #ff7300, #fffb00, #48ff00,
               #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000
             );
             background-size: 400%;
             filter: blur(15px);
             opacity: 0;
             border-radius: 12px;
-            z-index: -1;
             transition: opacity 0.3s ease-in-out;
             animation: glowing 20s linear infinite;
+            z-index: -2;
           }
 
           &:active {
@@ -1142,19 +1143,14 @@ a:active {}
     }
 
     .pc-indeterminate {
-      input[type="checkbox"]:indeterminate {
-        box-shadow: 0 0 5px 5px rgb(224, 5, 5);
+      * {
+        margin-left: 20px;
       }
 
-      input[type="radio"]:indeterminate {
-        box-shadow: 0 0 5px 5px rgb(17, 235, 28);
-      }
-
+      input[type="checkbox"]:indeterminate,
+      input[type="radio"]:indeterminate,
       progress:indeterminate {
-        display: block;
-        margin-top: 10px;
-        width: 300px;
-        height: 50px;
+        box-shadow: 0 0 5px 5px rgb(224, 5, 5);
       }
     }
 
@@ -1163,21 +1159,21 @@ a:active {}
         background-color: beige;
         padding: 5px;
         border: 2px solid green;
-      }
 
-      input:in-range + label::after {
-        content: "In range";
-        color: green;
+        + label::after {
+          content: "In range";
+          color: green;
+        }
       }
 
       input:out-of-range {
         border: 2px solid red;
         padding: 5px;
-      }
 
-      input:out-of-range + label::after {
-        content: "Sorry! Enter a value within the specified range.";
-        color: red;
+        + label::after {
+          content: "Sorry! Enter a value within the specified range.";
+          color: red;
+        }
       }
     }
 
