--- a/assets/css/learn-css.css
+++ b/assets/css/learn-css.css
@@ -1299,12 +1299,61 @@ a:active {}
     }
 
     .pc-not {
-      p:not(.special) {
-        color: red;
-      }
+      > div {
+        margin-top: 50px;
 
-      .special:not(#super-special) {
-        background-color: peachpuff;
+        &.example-1 {
+          p:not(.special) {
+            color: red;
+          }
+
+          .special:not(#super-special) {
+            background-color: peachpuff;
+          }
+        }
+
+        &.example-2 {
+          .sample {
+            text-shadow: 2px 2px 3px blue;
+          }
+
+          h4:not(.sample) {
+            background-color: lightblue ;
+          }
+
+          :not(div) {
+            font-weight: bold;
+          }
+        }
+
+        &.example-3 {
+          /*
+          for 2n+1;
+          n = 2 * 0 + 1 → 1 ✅
+          n = 2 * 1 + 1 → 3 ✅
+          n = 2 * 2 + 1 → 5 ✅
+          n = 2 * 3 + 1 → 7 ... don't continue since we only have 5 paragraph elements
+
+          WHAT TO EXPECT: Dont style paragraph 1, 3 and 5
+          */
+          :not(:nth-child(2n+1)) {
+            background-color: #0000FF;
+          }
+        }
+
+        &.example-4 {
+          li {
+            font-size: 2.5em;
+
+            .sample {
+              color: green;
+            }
+
+            &:not(.sample) {
+              color: red;
+            }
+          }
+        }
       }
     }
 
